# poor-mans-ql

./: .gitignore  CMakeLists.txt  LICENSE  README.md  context.h  error.h  expression.h  genindex.html  index.html  objects.inv  op.h  ops.h  pack-ivv.cpp  search.html  searchindex.js  store.h  test.cpp  tokens.h  util.h
.github/workflows/: cmake.yml  sphinx.yml
bench/: CMakeLists.txt  bench.t.cpp
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
pmql/: CMakeLists.txt  bitmap.h  builder.h  context.h  error.h  expression.h  extensions.h  functions.h  null.h  op.h  ops.h  result.h  results.h  serial.h  store.h  unwrap.h
pmql/parser/: CMakeLists.txt  dryrun.h  grammar.h
test/: CMakeLists.txt  example.t.cpp  grammar.t.cpp  invalidation.t.cpp  pegtl.t.cpp
